--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "concurrently": "^5.0.0",
     "expo": "^35.0.0",
+    "lodash": "^4.17.15",
+    "moment-mini": "^2.22.1",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
   },
