--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "watch": "coffee -b -o app -wc src"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.5",
+    "@react-navigation/core": "^5.0.0-alpha.26",
+    "@react-navigation/native": "^5.0.0-alpha.16",
+    "@react-navigation/stack": "^5.0.0-alpha.40",
     "concurrently": "^5.0.0",
     "expo": "^35.0.0",
     "lodash": "^4.17.15",
     "moment-mini": "^2.22.1",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-safe-area-context": "~0.3.6",
+    "react-native-screens": "~1.0.0-alpha.23"
   },
   "devDependencies": {
     "coffeescript": "^2.3.2",
