--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
-    "@react-navigation/core": "^5.0.0-alpha.26",
-    "@react-navigation/native": "^5.0.0-alpha.16",
-    "@react-navigation/stack": "^5.0.0-alpha.40",
     "concurrently": "^5.0.0",
     "expo": "^35.0.0",
     "lodash": "^4.17.15",
@@ -22,7 +19,11 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-safe-area-context": "~0.3.6",
-    "react-native-screens": "~1.0.0-alpha.23"
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-svg": "^9.13.6",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
     "coffeescript": "^2.3.2",
